<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="act_titulo">Adicionar no Carrinho</string>
    <string name="act_calcular_produtos">Calcular Produtos</string>
    <string name="act_enviar_feedback">Sugestões</string>
    <string name="action_settings">Nova Compra</string>
    <string name="titulo">Lista de Compras</string>
    <!--String hint-->
    <string name="hint_quantidade">0</string>
    <string name="hint_produto">Produto</string>
    <string name="hint_valor">R$00,00</string>

    <!--String Titulos-->
    <string name="quantidade">Itens</string>
    <string name="produtos">Produtos</string>
    <string name="valores">Valores</string>
    <string name="total_itens">Total Itens</string>
    <string name="total_compra">Total Compra</string>

    <!--String Botoes e Menu-->
    <string name="btn_adicionar">Adicionar</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar</string>
    <string name="menu_feedback">Enviar feedback</string>
    <string name="hint_menu_feedback">Assunto</string>

    <!--String act calcular produto-->
    <string name="titulo_produto_1">Produto 1</string>
    <string name="titulo_produto_2">Produto 2</string>
    <string name="medida_produto">Medida (mℓ ou g)</string>
    <string name="valor_produto">Valor</string>
    <string name="hint_valor_produto">R$3,50</string>
    <string name="hint_valor_produto_2">R$5,00</string>
    <string name="hint_peso_produto">300</string>
    <string name="hint_peso_produto_2">500</string>
    <string name="menu_calcular_produto">Calcular Produtos</string>
    <string name="string_email_assunto" />
    <string name="string_email_desenvolvedor">empessoa.app.developer@gmail.com</string>
    <string name="string_informar_produto">Melhor Opção!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
