<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayoutMain"
    android:orientation="vertical"
    tools:context="br.com.empessoa8.listamercado.controller.Frag_Calculo">

    <TextView
        android:id="@+id/txtv_informar_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_informar_produto"
        android:textColor="@color/cor_texto"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtv_produto_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/titulo_produto_1"
        android:textColor="@color/cor_texto"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/medida_produto"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/edt_peso_produto_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_peso_produto_2"
                android:inputType="numberDecimal"
                android:textColor="@color/cor_texto"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/valor_produto"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/edt_valor_produto_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_valor_produto_2"
                android:inputType="numberDecimal"
                android:textColor="@color/cor_texto"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtv_produto_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/titulo_produto_2"
        android:textColor="@color/cor_texto"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/medida_produto"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/edt_peso_produto_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_peso_produto"
                android:inputType="numberDecimal"
                android:textColor="@color/cor_texto"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/valor_produto"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/edt_valor_produto_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_valor_produto"
                android:inputType="numberDecimal"
                android:textColor="@color/cor_texto"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botoes"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/cor_botao"
            android:text="@string/btn_calcular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_limpar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/cor_botao"
            android:text="@string/btn_limpar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
