<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayoutMain"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="br.com.empessoa8.listamercado.controller.Act_Email">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:text="@string/string_email_desenvolvedor"
        android:textColor="@color/cor_texto"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/edit_assunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_menu_feedback"
        android:inputType="textPersonName"
        android:textColor="@color/cor_texto"
        android:textStyle="bold|italic"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:gravity="left"
        android:hint="Messagem"
        android:inputType="textMultiLine"
        android:textColor="@color/cor_texto"
        android:textStyle="bold|italic"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="90dp"
        android:layout_weight="0.04"
        android:background="@color/cor_botao"
        android:text="@string/btn_enviar"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        tools:ignore="InefficientWeight" />

</LinearLayout>
