<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayoutMain"
    android:padding="5dp"
    tools:context="br.com.empessoa8.listamercado.controller.Frag_Compras">


    <!--android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin_right"
        android:layout_marginBottom="@dimen/fab_3_margin_bottom"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:ignore="RtlHardcoded"
        app:backgroundTint="@color/colorSliding"/-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_calcularProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_2_margin_bottom"
        android:layout_marginRight="@dimen/fab_margin_right"
        android:visibility="invisible"
        app:backgroundTint="@color/colorSliding"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:ignore="RtlHardcoded" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_limparCompras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_1_margin_bottom"
        android:layout_marginRight="@dimen/fab_margin_right"
        android:visibility="invisible"
        app:backgroundTint="@color/colorSliding"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="RtlHardcoded" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_marginRight="@dimen/fab_margin_right"
        app:backgroundTint="@color/colorSliding"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.49"
                android:text="@string/quantidade"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:gravity="start"
                android:text="@string/produtos"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:gravity="start"
                android:text="@string/valores"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_quantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:gravity="center_horizontal"
                android:hint="@string/hint_quantidade"
                android:inputType="number"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_produtos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="center_horizontal"
                android:hint="@string/hint_produto"
                android:inputType="textPersonName"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/hint_valor"
                android:inputType="number"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/btn_adicionar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:background="@android:drawable/ic_menu_add"
                android:backgroundTint="@color/colorSliding"
                android:contentDescription=""
                android:textSize="10sp"
                tools:ignore="ContentDescription,SmallSp,UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_itens"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_compra"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_itens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/total_compras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/cor_texto"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ListView
            android:id="@+id/lista_compras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundListCompras"
            android:dividerHeight="2dp"
            android:divider="@color/colorSliding"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
